styles.css
.heading1 {
  text-align: center;
}
#mode {
  margin-left: 90%;
  cursor: pointer;
}
.ol {
  list-style-type: none;
  font-size: 2rem;
}

li {
  text-align: center;
  margin: 10px;
}
a {
  color: rgb(160, 92, 3);
}
#list-container {
  width: 90%;
  height: auto;
  border: rgb(105, 102, 102) solid 1px;
  box-shadow: yellow;
  margin: 0 auto;
  border-radius: 9px;
  background-color: rgb(189, 183, 175);
}

